# ros-gazebo-plugin-tutorial

./: .gitignore  readme.md
01_compilation_and_loading/: CMakeLists.txt  build_plugin.bash  readme.md  run_example.bash
01_compilation_and_loading/src/: .ex02_world_pluging.cc.swp  ex02_world_pluging.cc  hello_world.cc
02_model_plugin/: CMakeLists.txt  kill_gazebo.bash  run_gazebo_with_plugin.bash
02_model_plugin/include/: .set_velocity.h.swp  set_velocity.h
02_model_plugin/src/: .set_velocity.cpp.swp  set_velocity.cpp
02_model_plugin/world/: .example.world.swp  example.world
03_actor_with_plugin/: creatin_command  kill_gazebo_world_only.bash  launch_gazebo_world_only.bash
03_actor_with_plugin/src/actor_package/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
03_actor_with_plugin/src/actor_package/include/actor_package/: .actor_plugin.h.swp  actor_plugin.h
03_actor_with_plugin/src/actor_package/src/: .actor_plugin.cpp.swp  actor_plugin.cpp
03_actor_with_plugin/src/actor_package/worlds/: .actor.world.swp  actor.world
docker/: build_image.bat  build_image.sh  container-start.bash  container-start.bat  image.dockerfile
